@@ -1,7 +1,8 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
-pending
+Pending
 * Fixes for Coop login.
+* Removes support for Forex Bank due to BankId requirement.
 
 v1.9.10.1 (2015-11-22)
 * Update certificate for ICA.
